--- a/buoi7/package.json
+++ b/buoi7/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "mongoose": "^6.5.2"
   }
 }
