--- a/buoi9/package.json
+++ b/buoi9/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
+    "startbt1": "nodemon baitap1.js",
     "start:dev": "nodemon dev.js"
   },
   "keywords": [],
