--- a/ben5-login/package.json
+++ b/ben5-login/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.3"
   }
