--- a/ben5-login/package.json
+++ b/ben5-login/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "ioredis": "^5.2.3",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.3"
