--- a/ben5-login/package.json
+++ b/ben5-login/package.json
@@ -16,6 +16,8 @@
     "ioredis": "^5.2.3",
     "js-sha256": "^0.9.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.3"
+    "mongoose": "^6.6.3",
+    "nodemailer": "^6.8.0",
+    "nodemailer-smtp-transport": "^2.7.4"
   }
 }
