--- a/ben5-login/package.json
+++ b/ben5-login/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "ioredis": "^5.2.3",
     "js-sha256": "^0.9.0",
